# Vector-Engine

./: .gitignore  Cargo.toml  example.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1710002726364-bad36e74d0a89.mjs
core/: tsconfig.json
core/src/: Aside.ts  Builders.ts  Elements.ts  Engine.ts  Loaders.ts  Reactive.ts  Scene.ts  Utils.ts  Vector.ts  main.ts
editor/: tsconfig.json
editor-new/: package.json
editor-new/src/: App.svelte  Preview.svelte  Timeline.svelte  app.css  aspectRatio.ts  stores.ts
editor/src/: main.ts
playground/: oldTest.ts  project.ts  test.ts  vector-engine.d.ts
src/: App.vue  FSUtils.ts  Runtime.ts  engine.ts  fs.ts  main.rs  main.ts  router.ts  style.css  styles.css  transition.ts
src-tauri/: Cargo.toml  example.js  example.ts  tauri.conf.json
src-tauri/shaders/: compile.bat  shader.frag  shader.vert  vert.spv
src-tauri/src/: compiler.rs  main.rs  renderer.rs  runtime.js
src-tauri/src/clips/: mod.rs
src-tauri/src/clips/shaders/: compile.bat
src-tauri/src/clips/shaders/compiled/: ellipse.frag.spv  rect.frag.spv  text.frag.spv  text.vert.spv
src-tauri/src/clips/shaders/ellipse/: shader.frag
src-tauri/src/clips/shaders/rect/: shader.frag
src-tauri/src/clips/shaders/text/: shader.frag
src-tauri/src/renderer/: elements.rs  mod.rs  renderer.rs  utils.rs
src-tauri/src/renderer/shaders/: compile.bat  frag.spv  shader.frag  shader.vert
src-tauri/src/renderer/shaders/clip/: shader.frag
src-tauri/src/renderer/shaders/compiled/: clip.frag.spv  rect.frag.spv
src-tauri/src/renderer/shaders/rect/: shader.frag  shader.vert
src-tauri/src/runtime/: mod.rs  runtime.js  runtime.ts  vector-engine.d.ts
src/components/: ActionBar.vue  ContextMenu.vue  Dropdown.vue  ErrorWindow.vue  NavBar.vue  Popup.vue  ProjectPreview.vue  SideMenu.vue  TimeLine.vue  Toggle.vue
src/engine/: Builders.ts  Element.ts  Engine.ts  EngineCore.ts  Vector.ts  engine-core.ts
src/lib/: Greet.svelte
src/stores/: EditorStore.ts  ProjectStore.ts  ProjectsStore.ts  SettingsStore.ts  WorkspaceStore.ts
src/views/: Editor.vue  OldEditor.vue  Projects.vue  Welcome.vue  Workspace.vue
src/workers/: AudioInferenceWorker.ts  EngineRenderWorker.ts  cacheProject.ts
test/: data.json  package.json  tsconfig.json  vite.config.ts
test/Assets/: test2.mkv
test/src/: main.ts  scene.ts  (+1 more)
vault/: Architecture.canvas  Vector Engine.md
vite-plugin/: package.json  tsconfig.json
(+21 files in other folders)
