[package]
name = "vector-engine"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
ash = { version = "0.37.3", features = ["linked", "debug"] }
png = "0.17.13"
cgmath = "0.18.0"
deno_core = "0.231.0"
deno_ast = { version = "1.0.1", features = ["transpiling"] }
tokio = { version = "1.36.0", features = ["full"] }
notify = "6.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
